# web_webview

./: .gitattributes  BUILD.gn  OAT.xml  README.en.md  README.md  README_ZH.md  bundle.json  config.gni  copy_files.py  diff1107.txt  hisysevent.yaml  prepare.sh  web_aafwk.gni
interfaces/kits/cj/: BUILD.gn
interfaces/kits/napi/: BUILD.gn
ohos_adapter/: BUILD.gn
ohos_adapter/aafwk_adapter/include/: aafwk_app_mgr_client_adapter_impl.h  aafwk_browser_host_impl.h  aafwk_render_scheduler_impl.h
ohos_adapter/aafwk_adapter/src/: aafwk_app_mgr_client_adapter_impl.cpp  aafwk_browser_client_adapter_impl.cpp  aafwk_browser_host_impl.cpp  aafwk_render_scheduler_impl.cpp
ohos_adapter/access_token_adapter/include/: access_token_adapter_impl.h
ohos_adapter/access_token_adapter/src/: access_token_adapter_impl.cpp
ohos_adapter/ai_engine_adapter/include/: ai_engine_adapter_impl.h
ohos_adapter/ai_engine_adapter/src/: ai_engine_adapter_impl.cpp
ohos_adapter/audio_adapter/include/: audio_capturer_adapter_impl.h  audio_device_desc_adapter_impl.h  audio_renderer_adapter_impl.h  audio_system_manager_adapter_impl.h
ohos_adapter/audio_adapter/src/: audio_capturer_adapter_impl.cpp  audio_capturer_adapter_mock.cpp  audio_device_desc_adapter_impl.cpp  audio_device_desc_adapter_mock.cpp  audio_renderer_adapter_impl.cpp  audio_renderer_adapter_mock.cpp  audio_system_manager_adapter_impl.cpp  audio_system_manager_adapter_mock.cpp
ohos_adapter/battery_mgr_adapter/include/: battery_mgr_client_adapter_impl.h
ohos_adapter/battery_mgr_adapter/src/: battery_mgr_client_adapter_impl.cpp
ohos_adapter/camera_adapter/include/: camera_manager_adapter_impl.h  camera_rotation_info_adapter_impl.h  format_adapter_impl.h  video_capture_range_adapter_impl.h  video_control_support_adapter_impl.h  video_device_descriptor_adapter_impl.h
ohos_adapter/camera_adapter/src/: camera_manager_adapter_impl.cpp  camera_manager_adapter_mock.cpp  camera_rotation_info_adapter_impl.cpp  camera_rotation_info_adapter_mock.cpp  format_adapter_impl.cpp  format_adapter_mock.cpp  video_capture_range_adapter_impl.cpp  video_capture_range_adapter_mock.cpp  video_control_support_adapter_impl.cpp  video_control_support_adapter_mock.cpp  video_device_descriptor_adapter_impl.cpp  video_device_descriptor_adapter_mock.cpp
ohos_adapter/cert_mgr_adapter/include/: cert_mgr_adapter_impl.h
ohos_adapter/cert_mgr_adapter/src/: cert_mgr_adapter_impl.cpp
ohos_adapter/datashare_adapter/include/: datashare_adapter_impl.h
ohos_adapter/datashare_adapter/src/: datashare_adapter_impl.cpp
ohos_adapter/date_time_format_adapter/include/: date_time_format_adapter_impl.h
ohos_adapter/date_time_format_adapter/src/: date_time_format_adapter_impl.cpp
ohos_adapter/display_manager_adapter/include/: display_manager_adapter_impl.h
ohos_adapter/graphic_adapter/: vsync_adapter_impl.cpp  vsync_adapter_impl.h
ohos_adapter/interfaces/: aafwk_app_mgr_client_adapter.h  aafwk_render_scheduler_host_adapter.h  access_token_adapter.h  ai_engine_adapter.h  audio_capturer_adapter.h  audio_renderer_adapter.h  audio_system_manager_adapter.h  background_task_adapter.h  battery_mgr_client_adapter.h  camera_manager_adapter.h  cert_mgr_adapter.h  datashare_adapter.h  date_time_format_adapter.h  display_manager_adapter.h  enterprise_device_management_adapter.h  event_handler_adapter.h  flowbuffer_adapter.h  graphic_adapter.h  hilog_adapter.h  hisysevent_adapter.h  hitrace_adapter.h  imf_adapter.h  location_adapter.h  media_adapter.h  media_avsession_adapter.h  media_codec_adapter.h  media_codec_decoder_adapter.h  mmi_adapter.h  mmi_keyevent_adapter.h  net_connect_adapter.h  net_proxy_adapter.h  ohos_adapter_helper.cpp  ohos_adapter_helper.h  ohos_init_web_adapter.h  ohos_resource_adapter.h  ohos_web_data_base_adapter.h  pasteboard_client_adapter.h  print_manager_adapter.h  res_sched_client_adapter.h  screen_capture_adapter.h  (+2 more)
ohos_glue/: BUILD.gn
ohos_glue/base/include/: ark_web_errno.cc  (+11 more)
ohos_interface/: .gitignore  BUILD.gn
ohos_interface/ohos_glue/: BUILD_webcore.gn
ohos_nweb/: BUILD.gn
ohos_nweb/etc/: web_config.xml
ohos_nweb/include/: .gitignore  nweb.h  nweb_access_request.h  nweb_accessibility_event_callback.h  nweb_accessibility_node_info.h  nweb_adapter_common.h  nweb_adapter_helper.h  nweb_app_link_callback.h  nweb_c_api.h  nweb_cache_options_impl.h  nweb_config_helper.h  nweb_console_log.h  nweb_context_menu_params.h  nweb_controller_handler.h  nweb_cookie_manager.h  nweb_data_base.h  nweb_date_time_chooser.h  nweb_download_manager.h  nweb_drag_data.h  nweb_engine.h  nweb_enhance_surface_adapter.h  nweb_file_selector_params.h  nweb_first_meaningful_paint_details.h  nweb_geolocation_callback_interface.h  nweb_gesture_event_result.h  nweb_handler.h  nweb_helper.h  nweb_hisysevent.h  nweb_hit_testresult.h  nweb_init_params.h  nweb_input_event_consumer.h  nweb_javascript_result_callback.h  nweb_js_dialog_result.h  nweb_js_http_auth_result.h  nweb_js_ssl_error_result.h  nweb_key_event.h  nweb_largest_contentful_paint_details.h  nweb_load_committed_details.h  nweb_log.h  nweb_precompile_callback.h  (+18 more)
ohos_nweb/src/: nweb_config_helper.cpp  nweb_crashpad_handler_main.cpp  nweb_enhance_surface_adapter.cpp  nweb_helper.cpp  nweb_hisysevent.cpp  nweb_input_event_consumer.cpp  nweb_snapshot_data_base.cpp  nweb_surface_adapter.cpp  nweb_window_adapter.cpp  webPlayGround.md  webview_value.cpp
ohos_wrapper/: BUILD.gn
ohos_wrapper/src/: nweb_location_wrapper.cpp
test/: BUILD.gn
test/ohos_nweb/: nweb_client_impl_test.cpp  nweb_client_impl_test.h  nweb_client_impl_test_for_intercept.cpp  nweb_client_impl_test_for_intercept.h  nweb_cookie_test_callback.h  nweb_downloadlistener_impl_test.cpp  nweb_downloadlistener_impl_test.h  nweb_handler_impl_test.cpp  nweb_handler_impl_test.h  nweb_input_event_consumer_test.cpp  nweb_input_event_consumer_test.h  nweb_javascript_result_callback_test.cpp  nweb_javascript_result_callback_test.h  nweb_js_dialog_impl_test.cpp  nweb_js_dialog_impl_test.h  nweb_test_log.h  nweb_web_render.cpp  ohos_nweb_test.cpp  utils.h
(+3693 files in other folders)
