# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("ohos_adapter_public_interface") {
  include_dirs = [ "//base/web/webview/ohos_adapter/interfaces" ]
}

ohos_shared_library("nweb_ohos_adapter") {
  sources = [
    "aafwk_adapter/src/aafwk_app_mgr_client_adapter_impl.cpp",
    "aafwk_adapter/src/aafwk_render_scheduler_impl.cpp",
    "battery_mgr_adapter/src/battery_mgr_client_adapter_impl.cpp",
    "display_manager_adapter/src/display_manager_adapter_impl.cpp",
    "interfaces/ohos_adapter_helper.cpp",
    "power_mgr_adapter/src/power_mgr_client_adapter_impl.cpp",
  ]

  cflags = [
    "-Wall",
    "-Werror",
    "-g3",
  ]

  include_dirs = [
    "aafwk_adapter/include",
    "display_manager_adapter/include",
    "power_mgr_adapter/include",
    "battery_mgr_adapter/include",
    "//base/web/webview/ohos_nweb/include",
    "//third_party/jsoncpp/include",
    "//third_party/json/include",
  ]

  public_configs = [ ":ohos_adapter_public_interface" ]

  external_deps = [
    "ability_base:base",
    "ability_base:want",
    "ability_base:zuri",
    "ability_runtime:app_manager",
    "battery_manager_native:batterysrv_client",
    "common_event_service:cesfwk_innerkits",
    "eventhandler:libeventhandler",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "multimedia_image_standard:image_native",
    "power_manager_native:powermgr_client",
    "utils_base:utils",
    "window_manager:libdm",
  ]

  part_name = "webview"
  subsystem_name = "web"
}
